Added bibtex entries!

--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -2,9 +2,10 @@
 \vspace{0.2in}
 \hspace*{0.16in}
 
-\section{Etat de l'art}
+\section{Travail connexe}
 \vspace{0.2in}
 \hspace*{0.16in}
+% Bhavnani et al. \textsuperscript{\cite{bhavnani2016segmentation}}
 
 \section{Conclusion}
 \vspace{0.1in}
