--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -459,6 +459,8 @@ Keywords: CNN, cell segmentation, cell counting, convolutional neural networks
 
 \newpage
 
-% \bibliography{rapport}
+Bhavnani et al. \textsuperscript{\cite{bhavnani2016segmentation}}
+
+\bibliography{main}
 
 \end{document}
