Updated bib tex!

--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -5,7 +5,7 @@
 \section{Travail connexe}
 \vspace{0.2in}
 \hspace*{0.16in}
-% Bhavnani et al. \textsuperscript{\cite{bhavnani2016segmentation}}
+Bhavnani et al. \textsuperscript{\cite{bhavnani2016segmentation}}
 
 \section{Conclusion}
 \vspace{0.1in}
