--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -5,7 +5,9 @@
 \section{Travail connexe}
 \vspace{0.2in}
 \hspace*{0.16in}
-Bhavnani et al. \textsuperscript{\cite{bhavnani2016segmentation}}
+Blood cell segmentation is the extraction of different blood cells from microscopic images. Blood cell counting is the process of counting the detected blood cells after segmentation. Many researchers have implemented methods for segmentation and counting of blood cells.
+
+Carlos X. Hern{\'{a}}ndez et al \textsuperscript{\cite{DBLP:journals/corr/abs-1802-10548}} have implemented a convolutional neural network (CNN) using a feature pyramid network combined with a VGG style neural network for segmenting and counting of cells in a given microscopy image which achived a relatively good accuracy of 95\% but with some failure cases such as: High cell overlap, Irregular cell shapes and bad focal planes.
 
 \section{Conclusion}
 \vspace{0.1in}
