--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -2,13 +2,15 @@
 \vspace{0.2in}
 \hspace*{0.16in}
 
-\section{Travail connexe}
+\section{Related Work}
 \vspace{0.2in}
 \hspace*{0.16in}
 Blood cell segmentation is the extraction of different blood cells from microscopic images. Blood cell counting is the process of counting the detected blood cells after segmentation. Many researchers have implemented methods for segmentation and counting of blood cells.\\
 
 V.KIMBAHUNE and al \textsuperscript{\cite{V.KIMBAHUNE}} have developed a method for segmenting and counting red blood cells (RBC) and white blood cells (WBC).
 segmentation is done using Pulse-Coupled Neural Network (PCNN) and square tracing algorithm for countour tracing after de-noising it with PCNN + median filter, the counting is performed by scaning the image and using edge detection method. this method gave good results compared to state of art methods.
+
+Bhavnani and al \textsuperscript{\cite{bhavnani2016segmentation}} have developed a method for segmenting and counting RBC (red blood cells), WBC (White blood cells) and platelets which is also called complete blood count (CBC), by using Otsu’s thresholding and morphological operations as a segmentation method, and for counting the are preforming a comparison between two methods: the watershed algorithm and Circular Hough Transform. the CHT method is the best in terms of accuracy but it has some weaknesses with overlaping cells and morphological abnormalities.
 
 Carlos X. Hern{\'{a}}ndez et al \textsuperscript{\cite{DBLP:journals/corr/abs-1802-10548}} have implemented a convolutional neural network (CNN) using a feature pyramid network combined with a VGG style neural network for segmenting and counting of cells in a given microscopy image which achived a relatively good accuracy of 95\% but with some failure cases such as: High cell overlap, Irregular cell shapes and bad focal planes.
 
