--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -38,14 +38,14 @@ abstract = {Leukocytes count in the blood smear images plays an important role i
   year={2016},
   publisher={Modern Education and Computer Science Press}
 }
-@article{V.KIMBAHUNE,
-author = {V.KIMBAHUNE, VINOD and VINOD, and J.UKE, MR},
-year = {2011},
-month = {03},
-pages = {},
-title = {BLOOD CELL IMAGE SEGMENTATION AND COUNTING},
-volume = {3},
-journal = {International Journal of Engineering Science and Technology}
+@article{kimbahune2011blood,
+  title={Blood cell image segmentation and counting},
+  author={Kimbahune, Vinod V and Uke, NJ},
+  journal={Inter J Engineer Sci Tech},
+  volume={3},
+  number={3},
+  pages={2448--2453},
+  year={2011}
 }
 @article{Kong:20,
 author = {Yan Kong and Hui Li and Yongyong Ren and Georgi Z. Genchev and Xiaolei Wang and Hongyu Zhao and Zhiping Xie and Hui Lu},
