--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -62,6 +62,24 @@ abstract = {Leukocytes count in the blood smear images plays an important role i
   pages={2448--2453},
   year={2011}
 }
+@inproceedings{labati2011all,
+  title={All-IDB: The acute lymphoblastic leukemia image database for image processing},
+  author={Labati, Ruggero Donida and Piuri, Vincenzo and Scotti, Fabio},
+  booktitle={2011 18th IEEE international conference on image processing},
+  pages={2045--2048},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{ljosa2012annotated,
+  title={Annotated high-throughput microscopy image sets for validation.},
+  author={Ljosa, Vebjorn and Sokolnicki, Katherine L and Carpenter, Anne E},
+  journal={Nature methods},
+  volume={9},
+  number={7},
+  pages={637--637},
+  year={2012}
+}
 @article{Kong:20,
 author = {Yan Kong and Hui Li and Yongyong Ren and Georgi Z. Genchev and Xiaolei Wang and Hongyu Zhao and Zhiping Xie and Hui Lu},
 journal = {OSA Continuum},
